# marimo-uv-starter-template

./: README.md  pyproject.toml
.github/workflows/: ci.yml
__marimo__/session/: altair-demo.py.json
notebooks/: altair-demo.py
notebooks/__marimo__/: altair-demo.html
notebooks/__marimo__/session/: altair-demo.py.json  app.py.json  notebook.py.json
